--- a/.github/workflows/fork-branch-deleter.yml
+++ b/.github/workflows/fork-branch-deleter.yml
@@ -1,23 +1,20 @@
-# This workflow will delete the respective fork branch when a PR authored by 'jenkins-is-staging' is merged/closed.
-name: Fork Branch Deleter
-
-on:
-  pull_request:
-    types: [ closed ]
-
 jobs:
   build:
-    # Check whether the PR was authored by jenkins-is-staging'
     if: github.event.pull_request.head.repo.owner.login == 'jenkins-is-staging'
-    runs-on: ubuntu-latest
-
+    runs-on: self-hosted
     steps:
-      # Check out the product-is fork of 'jenkins-is-staging' user
-      - uses: actions/checkout@v2
-        with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          token: ${{ secrets.PAT }}
-      - name: Owner
-        run: echo ${{ github.event.pull_request.head.repo.owner.login }}
-      - name: Delete Fork Branch of wso2-jenkins-bot
-        run: git push -d origin ${{ github.event.pull_request.head.ref }}
+    - continue-on-error: true
+      uses: actions/checkout@v2
+      with:
+        repository: ${{ github.event.pull_request.head.repo.full_name }}
+        token: ${{ secrets.PAT }}
+    - continue-on-error: true
+      name: Owner
+      run: echo ${{ github.event.pull_request.head.repo.owner.login }}
+    - continue-on-error: true
+      name: Delete Fork Branch of wso2-jenkins-bot
+      run: git push -d origin ${{ github.event.pull_request.head.ref }}
+name: Fork Branch Deleter
+on:
+  repository_dispatch:
+    types: trigger-ga___fork-branch-deleter.yml
